force-app/main/default/objects/EnforcementActionDocument__c/EnforcementActionDocument__c.object-meta.xml
<CustomObject>
    <label>Enforcement Action Document</label>
    <nameField>
        <label>Enforcement Action Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enforcement Action Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>