force-app/main/default/objects/EnforcementActionDocument__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>PacPoint JF 1/29/26: Created to store the upload date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>