force-app/main/default/objects/EnforcementActionDocument__c/fields/DocumentUUID__c.field-meta.xml
<CustomField>
    <fullName>DocumentUUID__c</fullName>
    <externalId>true</externalId>
    <label>Document UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>