force-app/main/default/objects/EnforcementActionDocument__c/fields/PublicURL__c.field-meta.xml
<CustomField>
    <fullName>PublicURL__c</fullName>
    <description>PacPoint JF 1/29/26: Created to store the public share link for the related docusign file</description>
    <label>Public URL</label>
    <type>Url</type>
</CustomField>