force-app/main/default/objects/EnforcementActionDocument__c/fields/SEBCaseContact__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseContact__c</fullName>
    <label>SEB Case Contact</label>
    <referenceTo>SEBCaseContact__c</referenceTo>
    <relationshipLabel>Enforcement Action Documents</relationshipLabel>
    <relationshipName>EnforcementActionDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>